Crash on saving or opening files with the Full Screen file browser window preference #76926

Closed
opened 2020-05-21 00:11:55 +02:00 by Daniel Salazar · 18 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-19 22:32, hash: 4f622c9a08

Short description of error
The file browser crashes when the Full Screen
crash.txt

Exact steps for others to reproduce the error

  • Fresh factory settings
  • Go to preferences/Interface/Editors/Temporary Windows
  • Set the File Browser to Full Screen image.png
  • Now save the blend file
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-19 22:32, hash: `4f622c9a08` **Short description of error** The file browser crashes when the Full Screen [crash.txt](https://archive.blender.org/developer/F8547731/crash.txt) **Exact steps for others to reproduce the error** - Fresh factory settings - Go to preferences/Interface/Editors/Temporary Windows - Set the File Browser to Full Screen ![image.png](https://archive.blender.org/developer/F8545569/image.png) - Now save the blend file
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#76972 was marked as duplicate of this issue

#76972 was marked as duplicate of this issue

#76910 was marked as duplicate of this issue

#76910 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the crash.
Can you run blender_debug-gpu.cmd that is included in the download.
After Blender closes, the logs will be in a text file which can be attached here.


Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006

I can't reproduce the crash. Can you run `blender_debug-gpu.cmd` that is included in the download. After Blender closes, the logs will be in a text file which can be attached here. ---- **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006
Author
Member
Here they are [blender_system_info.txt](https://archive.blender.org/developer/F8546926/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8546927/blender_debug_output.txt)

Added subscriber: @enenra

Added subscriber: @enenra

I have the same issue. Saving the default cube crashes when file browser set to full screen.
What I find bizarre is that if I start blender with "./blender --debug-all" it doesn't crash.

System Information
Operating system: Linux-5.6.10-custom-x86_64-AMD_A8-5600K_APU_with_Radeon-tm-_HD_Graphics-with-slackware-14.2 64 Bits
Graphics card: AMD Radeon (TM) RX 480 Graphics (POLARIS10, DRM 3.36.0, 5.6.10-custom, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.2

Blender Version
Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-21 08:18, hash: d15efbdc56
Worked: blender-2.83-008e96494008-linux64

I have the same issue. Saving the default cube crashes when file browser set to full screen. What I find bizarre is that if I start blender with "./blender --debug-all" it doesn't crash. **System Information** Operating system: Linux-5.6.10-custom-x86_64-AMD_A8-5600K_APU_with_Radeon-tm-_HD_Graphics-with-slackware-14.2 64 Bits Graphics card: AMD Radeon (TM) RX 480 Graphics (POLARIS10, DRM 3.36.0, 5.6.10-custom, LLVM 10.0.0) X.Org 4.6 (Core Profile) Mesa 20.0.2 **Blender Version** Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-21 08:18, hash: `d15efbdc56` Worked: blender-2.83-008e96494008-linux64

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Julian Eisel self-assigned this 2020-05-22 14:58:07 +02:00
Member

Probably caused by 796412dca0 (not a 2.83 bug then). Investigating.

Probably caused by 796412dca0 (not a 2.83 bug then). Investigating.
Member

Added subscribers: @dr.sybren, @JacquesLucke

Added subscribers: @dr.sybren, @JacquesLucke
Member

No, this is actually caused by b75ce05c3b, so it is a 2.83 regression.

No, this is actually caused by b75ce05c3b, so it is a 2.83 regression.
Member

The crash happens because the cancelling of the file browser removes its screen (as in bScreen). Before b75ce05c3b, the file browser event wouldn't be handled any further then. After it, it would still be passed to other areas, while the screen pointer was dangling.
All this is very fragile code that has caused many bugs already. It's another example where we would need some kind of "sandboxed" execution for destructive handlers. See D7795.

@JacquesLucke I think going back to your earlier approach in D7720 is the best solution. It fixes this crash, and also still fixes #75292 & #73579. Would've prefered the more general solution, but the one specific to UI-handlers is still totally acceptable.

The crash happens because the cancelling of the file browser removes its screen (as in `bScreen`). Before b75ce05c3b, the file browser event wouldn't be handled any further then. After it, it would still be passed to other areas, while the screen pointer was dangling. All this is very fragile code that has caused many bugs already. It's another example where we would need some kind of "sandboxed" execution for destructive handlers. See [D7795](https://archive.blender.org/developer/D7795). @JacquesLucke I think going back to your earlier approach in [D7720](https://archive.blender.org/developer/D7720) is the best solution. It fixes this crash, and also still fixes #75292 & #73579. Would've prefered the more general solution, but the one specific to UI-handlers is still totally acceptable.

This issue was referenced by 2dd6d0ce4b

This issue was referenced by 2dd6d0ce4b6d0b72274234073306982c3122c904

This issue was referenced by 6fbeded285

This issue was referenced by 6fbeded285466327831b901c652e13e742c44689
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:35:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76926
No description provided.